# iForest-cit-sci-predictors

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  environment.yml  params.yaml  pyproject.toml  setup.py
.dvc/: config
data/interim/forest_mask/: .gitignore
data/interim/gbif/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore  ne_10m_admin_0_countries.dvc  sentinel-2.dvc
data/raw/gbif/: .gitignore  all_tracheophyta_2024-01-18.json.dvc  all_tracheophyta_2024-01-18.zip.dvc
data/raw/masks/: .gitignore  forest_type_2018.dvc
data/raw/masks/forest_type_2018/: .gitignore
data/raw/sentinel-2/: .gitignore  fca_grid_empty_raster_R10m.tif.dvc  fca_grid_empty_raster_R20m.tif.dvc
notebooks/: 1-0-dtl-initial-data-exploration.ipynb  1-1-dtl-explore-masked-gbif.ipynb  2-0-dtl-mask-gbif-data.ipynb  2-0-dtl-tree-based-stats.ipynb  2-1-dtl-kernel-based-stats.ipynb  3-0-dtl-proposal-figures.ipynb
src/conf/: config.yaml  data_config.py  parse_params.py
src/data/: clip_binarize_forest_mask.py  clip_forest_mask.py  clip_gbif.py  mask_gbif.py  polygonize_forest_mask.py  reproject_forest_mask.py  save_gbif_points.py  setup_forest_mask.py
src/features/: compute_grid_stats.py  compute_grid_stats_reverse_tree.py  compute_grid_stats_tree.py  nc_to_gtiff.py  save_gbif_points.py
src/iforest_cit_sci_feats/data/: download_gbif.py
src/utils/: df_utils.py  log_utils.py  raster_utils.py  setup_logger.py
tests/: test_mask_gbif.py
tests/data/: test_download_gbif.py
