[tool.poetry]
name = "iforest-cit-sci-feats"
version = "0.1.0"
description = "Citizen science predictors (based on GBIF) matched to Sentinel-2 grids for the iForest prestudy. "
authors = ["Daniel Lusk"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dluks/iforest-cit-sci-feats"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pylint = "^3.0.3"
pylint-pytest = "^1.1.7"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"