[tool.poetry]
name = "iforest-cit-sci-feats"
version = "0.1.0"
description = "Citizen science predictors (based on GBIF) matched to Sentinel-2 grids for the iForest prestudy. "
authors = ["Daniel Lusk"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dluks/iforest-cit-sci-feats"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.0"
ipykernel = "^6.29.0"
pandas = "^2.2.0"
pyarrow = "^14.0.2"
pyogrio = "^0.7.2"
geopandas = "^0.14.2"
rioxarray = "^0.15.1"
rasterio = "^1.3.9"
pyyaml = "^6.0.1"
numpy = "^1.26.3"
shapely = "^2.0.2"
matplotlib = "^3.8.2"
pygeos = "^0.14"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"
scipy = "^1.12.0"
seaborn = "^0.13.2"
dask = "^2024.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pylint = "^3.0.3"
pylint-pytest = "^1.1.7"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"